--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -14,6 +14,7 @@ textarea {
   display: flex;
   align-items: center;
   outline-color: white;
+  word-wrap: break-word;
 }
 
 div.PostTweet {
@@ -21,4 +22,5 @@ div.PostTweet {
   display: flex;
   font-family: "Bungee", "sans-serif";
   justify-content: space-between;
+  word-wrap: break-word;
 }
